tests/snapshots/snapshots__pipeline@derive_stable_bad.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/derive_stable_bad.pr
---
== tokens ==
VOpen Class UIdent("Stable") LParen Ident("a") RParen VSemi Type UIdent("Config") Eq UIdent("C") LBrace Ident("retry") Colon KwInt Comma Ident("on_fail") Colon LParen KwUnit RParen Arrow KwUnit RBrace Deriving LParen UIdent("Stable") RParen VSemi Fn Ident("main") LParen RParen Eq Int(IntLit { value: 0, suffix: None }) VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Config",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "C",
                    args: [
                        Int,
                        Fun(
                            [
                                Unit,
                            ],
                            Empty,
                            Unit,
                        ),
                    ],
                    fields: Some(
                        [
                            (
                                "retry",
                                Int,
                            ),
                            (
                                "on_fail",
                                Fun(
                                    [
                                        Unit,
                                    ],
                                    Empty,
                                    Unit,
                                ),
                            ),
                        ],
                    ),
                    span: 31..32,
                },
            ],
            deriving: [
                (
                    "Stable",
                    83..89,
                ),
            ],
            newtype: false,
            span: 17..90,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [
        ClassDecl {
            name: "Stable",
            param: "a",
            supers: [],
            methods: [],
            span: 0..15,
        },
    ],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Int(
                    IntLit {
                        value: 0,
                        suffix: None,
                    },
                ),
                span: 104..105,
            },
            wheres: [],
            span: 92..105,
        },
    ],
}

== types ==
[E6021] Type Error: cannot derive Stable for Config: field `on_fail` has type `(Unit) -> Unit`, which is not Stable. A frozen format cannot contain a value that is not itself serializable.
   ╭─[ <source>:3:67 ]
   │
 3 │ type Config = C { retry: Int, on_fail: (Unit) -> Unit } deriving (Stable)
   │                                                                   ───┬──  
   │                                                                      ╰──── cannot derive Stable for Config: field `on_fail` has type `(Unit) -> Unit`, which is not Stable. A frozen format cannot contain a value that is not itself serializable.
───╯
