tests/snapshots/snapshots__pipeline@eff_arity.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/eff_arity.pr
---
== tokens ==
VOpen Effect UIdent("Emit") LParen Ident("a") RParen VOpen Ident("emit") LParen Ident("a") RParen Colon KwUnit VClose VSemi Fn Ident("bad") LParen RParen Colon KwUnit Bang LBrace UIdent("Emit") LParen KwInt Comma KwString RParen RBrace Eq Ident("emit") LParen Int(IntLit { value: 1, suffix: None }) RParen VSemi Fn Ident("main") LParen RParen Eq LParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Emit",
            params: [
                "a",
            ],
            ops: [
                EffOp {
                    name: "emit",
                    params: [
                        Var(
                            "a",
                        ),
                    ],
                    ret: Unit,
                    grade: Many,
                    span: 17..21,
                },
            ],
            span: 0..31,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "bad",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Int,
                            Str,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "emit",
                        ),
                        span: 73..77,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 78..79,
                        },
                    ],
                ),
                span: 73..80,
            },
            wheres: [],
            span: 33..80,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Unit,
                span: 94..96,
            },
            wheres: [],
            span: 82..96,
        },
    ],
}

== types ==
[E5000] Type Error: in `bad`: effect `Emit` expects 1 type argument(s), got 2
   ╭─[ <source>:4:1 ]
   │
 4 │ fn bad() : Unit ! {Emit(Int, String)} = emit(1)
   │ ───────────────────────┬───────────────────────  
   │                        ╰───────────────────────── in `bad`: effect `Emit` expects 1 type argument(s), got 2
───╯
