tests/snapshots/snapshots__pipeline@eff_arity_annot.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/eff_arity_annot.pr
---
== tokens ==
VOpen Effect UIdent("Emit") LParen Ident("a") RParen VOpen Ident("emit") LParen Ident("a") RParen Colon KwUnit VClose VSemi Fn Ident("consume") LParen Ident("f") Colon LParen KwUnit RParen Arrow KwUnit Bang LBrace UIdent("Emit") LParen KwInt Comma KwInt RParen RBrace RParen Colon KwInt Eq Int(IntLit { value: 0, suffix: None }) VSemi Fn Ident("main") LParen RParen Eq LParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Emit",
            params: [
                "a",
            ],
            ops: [
                EffOp {
                    name: "emit",
                    params: [
                        Var(
                            "a",
                        ),
                    ],
                    ret: Unit,
                    grade: Many,
                    span: 17..21,
                },
            ],
            span: 0..31,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "consume",
            params: [
                Param {
                    name: "f",
                    ty: Some(
                        Fun(
                            [
                                Unit,
                            ],
                            Cons(
                                [
                                    EffLabel {
                                        name: "Emit",
                                        args: [
                                            Int,
                                            Int,
                                        ],
                                    },
                                ],
                                None,
                            ),
                            Unit,
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Int(
                    IntLit {
                        value: 0,
                        suffix: None,
                    },
                ),
                span: 91..92,
            },
            wheres: [],
            span: 33..92,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Unit,
                span: 106..108,
            },
            wheres: [],
            span: 94..108,
        },
    ],
}

== types ==
[E5000] Type Error: in `consume`: effect `Emit` expects 1 type argument(s), got 2
   ╭─[ <source>:4:1 ]
   │
 4 │ fn consume(f : (Unit) -> Unit ! {Emit(Int, Int)}) : Int = 0
   │ ─────────────────────────────┬─────────────────────────────  
   │                              ╰─────────────────────────────── in `consume`: effect `Emit` expects 1 type argument(s), got 2
───╯
